Added v1 to all API endpoints to indicate API version 1
