# backend/src/api/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 0.1.0
 # Paths
 paths:
-  /:
+  /v1/:
     get:
       # no security reason: hello world test endpoint does not need security
       security: []
@@ -17,7 +17,7 @@ paths:
             text/plain; charset=utf-8:
               schema:
                 type: string
-  /blogposts:
+  /v1/blogposts:
     get:
       # no security reason: blog posts are available regardless of authentication (depending on blog post permissions)
       security: []
@@ -48,7 +48,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BlogPost'
 
-  /users/signup:
+  /v1/users/signup:
     post:
       # no security reason: user is trying to make an account in the first place
       security: []
@@ -89,7 +89,7 @@ paths:
                 items:
                   type: string
   
-  /users/login:
+  /v1/users/login:
     post:
       # no security reason: user is trying to log into an existing account
       security: []
